--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -252,6 +252,15 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a asp-action="Form" asp-controller="Form" class="nav-link">
+                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=BL3KLsMipdjo&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=BL3KLsMipdjo&amp;format=png 2x" width="30px" height="30px" alt="Complaint icon" style="">
+                                <p>
+                                   Form
+                                    <span class="badge badge-info right"></span>
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a asp-action="Complaint" asp-controller="User" class="nav-link">
                                 <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=BL3KLsMipdjo&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=BL3KLsMipdjo&amp;format=png 2x" width="30px" height="30px" alt="Complaint icon" style="">
                                 <p>
