14-03-2024 17:25pm totally working Code till now of user but demand form not submiting

--- a/VidhayakApp.Web/Views/User/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/User/Complaint.cshtml
@@ -89,7 +89,7 @@
         </div>
     </section>
 
-    <script src="~/js/department.js"></script>
+    @* <script src="~/js/department.js"></script> *@
 
     
 </body>
