--- a/VidhayakApp.Web/Views/User/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/User/Dashboard.cshtml
@@ -23,7 +23,7 @@
                             <thead>
                                 <tr>
                                     <th>Type </th>
-                                    <th>ItemId</th>
+                                    <th>Sub Category</th>
                                     <th>Title</th>
                                     <th>Description</th>
                                     <th>Created On</th>
@@ -71,6 +71,7 @@
                                         <td>@item.Title</td>
                                         <td>@item.Description</td>
                                         <td>@item.CreatedAt</td>
+                                        <td>@item.UpdatedAt</td>
                                         <td>
                                             @if (item.Status == StatusType.Pending)
                                             {
